增加了一点理解

--- a/操作图数据库neo4j/Graph.ipynb
+++ b/操作图数据库neo4j/Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "# Delete all nodes and relationships from this Graph.\n",
@@ -51,11 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "outputs": [],
    "source": [
+    "# 支持数据类型:字符串;数值;布尔值;字符串/数组/布尔值组成的数组\n",
     "a = Node(\"Person\", name=\"Alice\", age=33)\n",
-    "b = Node(\"Person\", name=\"Bob\", age=44)\n",
+    "b = Node(\"Person\", name=\"Bob\", age=44, is_woman=False, love=[\"soccer\", \"LOL\"])\n",
     "KNOWS = Relationship.type(\"KNOWS\")\n",
     "'''\n",
     "Run a create() operation within a Transaction.\n",
@@ -74,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "frozenset({'Person'})"
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
       "text/plain": "frozenset({'KNOWS'})"
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
