--- a/操作Elasticsearch搜索和分析引擎/painless脚本/脚本参数.ipynb
+++ b/操作Elasticsearch搜索和分析引擎/painless脚本/脚本参数.ipynb
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'result': '0.5025'}"
+      "text/plain": "{'result': '0.5'}"
      },
      "execution_count": 3,
      "metadata": {},
@@ -40,7 +40,9 @@
    ],
    "source": [
     "a = 100.5\n",
-    "b = 200.0\n",
+    "\n",
+    "def exp(x):\n",
+    "    return x + x\n",
     "\n",
     "es.scripts_painless_execute(body={\n",
     "    \"script\": {\n",
@@ -49,7 +51,7 @@
     "        # Use parameters instead of hard-coded values to decrease compile time.\n",
     "        \"params\": {\n",
     "            \"count\": a,\n",
-    "            \"total\": b\n",
+    "            \"total\": exp(a)\n",
     "        }\n",
     "    }\n",
     "})\n",
