--- a/操作Elasticsearch搜索和分析引擎/base查询数据/search/joining_queries/nested-query.ipynb
+++ b/操作Elasticsearch搜索和分析引擎/base查询数据/search/joining_queries/nested-query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,9 @@
     "        }\n",
     "    }\n",
     "}\n",
-    "es.indices.create(index='es0', body=body)"
+    "if es.indices.exists('es0'):\n",
+    "    es.indices.delete('es0')\n",
+    "es.indices.create('es0', body=body)"
    ],
    "metadata": {
     "collapsed": false,
@@ -63,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
       "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '1',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 1,\n '_primary_term': 1}"
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 2,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 1, 'relation': 'eq'},\n  'max_score': 3.7349272,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 3.7349272,\n    '_source': {'driver': {'last_name': 'McQueen',\n      'vehicle': [{'make': 'Powell Motors', 'model': 'Canyonero'},\n       {'make': 'Miller-Meteor', 'model': 'Ecto-1'}]}}}]}}"
+      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 1, 'relation': 'eq'},\n  'max_score': 0.0,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.0,\n    '_source': {'driver': {'last_name': 'McQueen',\n      'vehicle': [{'make': 'Powell Motors', 'model': 'Canyonero'},\n       {'make': 'Miller-Meteor', 'model': 'Ecto-1'}]}}}]}}"
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,30 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'acknowledged': True}"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "es.indices.delete('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "outputs": [],
    "source": [],
    "metadata": {
