--- a/操作Elasticsearch搜索和分析引擎/base查询数据/search/技巧_数组查询1.ipynb
+++ b/操作Elasticsearch搜索和分析引擎/base查询数据/search/技巧_数组查询1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -13,25 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 92,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])\n",
+    "if es.indices.exists('es0'):\n",
+    "    es.indices.delete('es0')\n",
     "es.indices.create('es0', body={\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
     "            \"name\": {\n",
     "                \"type\": \"text\",\n",
-    "                \"analyzer\": \"ik_max_word\"\n",
+    "                \"analyzer\": \"ik_max_word\",\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -46,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
       "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '5',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 5,\n '_primary_term': 1}"
      },
-     "execution_count": 93,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +62,7 @@
    "source": [
     "es.index(index='es0', id=0, body={\"name\": [\"Java初级入门\", \"c++初级入门\", \"python初级入门\", \"rust初级入门\"]})\n",
     "es.index(index='es0', id=1, body={\"name\": [\"Java高手之路\", \"c++高手之路\", \"python高手之路\", \"rust高手之路\"]})\n",
-    "es.index(index='es0', id=2, body={\"name\": [\"Java web开发\", \"Java多线程开发\", \"Java spring开发\"]})\n",
+    "es.index(index='es0', id=2, body={\"name\": [\"Java web开发\", \"达\", \"Java多线程开发\", \"财\", \"Java spring开发\"]})\n",
     "es.index(index='es0', id=3, body={\"name\": [\"c++游戏开发\", \"大神教你学c++\", \"游戏引擎开发:c++\"]})\n",
     "es.index(index='es0', id=4, body={\"name\": [\"python前端开发\", \"python后端开发\", \"自然语言处理:python\"]})\n",
     "es.index(index='es0', id=5, body={\"name\": [\"rust前端开发\", \"rust机器学习\", \"嵌入式:rust\"]})"
@@ -74,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 56,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 3, 'relation': 'eq'},\n  'max_score': 1.1295731,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 1.1295731,\n    '_source': {'name': ['Java web开发', 'Java多线程开发', 'Java spring开发']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 0.67029613,\n    '_source': {'name': ['Java初级入门', 'c++初级入门', 'python初级入门', 'rust初级入门']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 0.67029613,\n    '_source': {'name': ['Java高手之路', 'c++高手之路', 'python高手之路', 'rust高手之路']}}]}}"
+      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 0, 'relation': 'eq'},\n  'max_score': None,\n  'hits': []}}"
      },
-     "execution_count": 94,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +92,8 @@
     "    \"query\": {\n",
     "        \"match\": {\n",
     "            # name字段类型为:text(分词)\n",
-    "            # [\"Java web开发\", \"Java多线程开发\", \"Java spring开发\"]分词为:['java', 'web', '开发', 'java', '多线程', '线程', '开发', 'java', 'spring', '开发']\n",
+    "            # [\"Java web开发\", \"达\", \"Java多线程开发\", \"财\", \"Java spring开发\"]分词为:['java', 'web', '开发', \"达\", 'java', '多线程', '线程', '开发', \"财\", 'java', 'spring', '开发']\n",
+    "            # 注意,不会跨元素分词,即Java web开发\", \"达\"不会分词为:[\"Java\", \"web\", \"开发\", \"发达\"]\n",
     "            \"name\": \"Java\"\n",
     "        }\n",
     "    }\n",
@@ -105,13 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 4, 'relation': 'eq'},\n  'max_score': 0.72002375,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 0.72002375,\n    '_source': {'name': ['Java web开发', 'Java多线程开发', 'Java spring开发']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '4',\n    '_score': 0.6221005,\n    '_source': {'name': ['python前端开发', 'python后端开发', '自然语言处理:python']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '3',\n    '_score': 0.5676099,\n    '_source': {'name': ['c++游戏开发', '大神教你学c++', '游戏引擎开发:c++']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '5',\n    '_score': 0.47416198,\n    '_source': {'name': ['rust前端开发', 'rust机器学习', '嵌入式:rust']}}]}}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '2',\n '_version': 1,\n 'found': True,\n 'took': 7,\n 'term_vectors': {'name': {'field_statistics': {'sum_doc_freq': 47,\n    'doc_count': 6,\n    'sum_ttf': 74},\n   'terms': {'java': {'term_freq': 3,\n     'tokens': [{'position': 0, 'start_offset': 0, 'end_offset': 4},\n      {'position': 204, 'start_offset': 13, 'end_offset': 17},\n      {'position': 409, 'start_offset': 25, 'end_offset': 29}]},\n    'spring': {'term_freq': 1,\n     'tokens': [{'position': 410, 'start_offset': 30, 'end_offset': 36}]},\n    'web': {'term_freq': 1,\n     'tokens': [{'position': 1, 'start_offset': 5, 'end_offset': 8}]},\n    '多线程': {'term_freq': 1,\n     'tokens': [{'position': 205, 'start_offset': 17, 'end_offset': 20}]},\n    '开发': {'term_freq': 3,\n     'tokens': [{'position': 2, 'start_offset': 8, 'end_offset': 10},\n      {'position': 207, 'start_offset': 20, 'end_offset': 22},\n      {'position': 411, 'start_offset': 36, 'end_offset': 38}]},\n    '线程': {'term_freq': 1,\n     'tokens': [{'position': 206, 'start_offset': 18, 'end_offset': 20}]},\n    '财': {'term_freq': 1,\n     'tokens': [{'position': 308, 'start_offset': 23, 'end_offset': 24}]},\n    '达': {'term_freq': 1,\n     'tokens': [{'position': 103, 'start_offset': 11, 'end_offset': 12}]}}}}}"
      },
-     "execution_count": 95,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.termvectors(index='es0', id=2, body= {\"fields\": [\"name\"]})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 4, 'relation': 'eq'},\n  'max_score': 0.6983531,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '2',\n    '_score': 0.6983531,\n    '_source': {'name': ['Java web开发',\n      '达',\n      'Java多线程开发',\n      '财',\n      'Java spring开发']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '4',\n    '_score': 0.6265712,\n    '_source': {'name': ['python前端开发', 'python后端开发', '自然语言处理:python']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '3',\n    '_score': 0.57269406,\n    '_source': {'name': ['c++游戏开发', '大神教你学c++', '游戏引擎开发:c++']}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '5',\n    '_score': 0.4788973,\n    '_source': {'name': ['rust前端开发', 'rust机器学习', '嵌入式:rust']}}]}}"
+     },
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,29 +152,6 @@
     "        }\n",
     "    }\n",
     "})"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'acknowledged': True}"
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "es.indices.delete('es0')"
    ],
    "metadata": {
     "collapsed": false,
