分词器的一个小学习

--- a/操作Elasticsearch搜索和分析引擎/分词器2_ik.ipynb
+++ b/操作Elasticsearch搜索和分析引擎/分词器2_ik.ipynb
@@ -40,6 +40,12 @@
    ],
    "source": [
     "# ik分词器:https://github.com/medcl/elasticsearch-analysis-ik\n",
+    "'''\n",
+    "安装:\n",
+    "./bin/elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v7.11.2/elasticsearch-analysis-ik-7.11.2.zip\n",
+    "\n",
+    "restart elasticsearch\n",
+    "'''\n",
     "es.indices.analyze(\n",
     "    body={\"analyzer\": \"ik_smart\",  # 细粒度\n",
     "          \"text\": \"轻度脂肪肝\"})"
