neo4j的一些优化

--- a/操作图数据库neo4j/Graph.ipynb
+++ b/操作图数据库neo4j/Graph.ipynb
@@ -24,6 +24,7 @@
     }
    ],
    "source": [
+    "# g = Graph('http://localhost:7474', auth=('neo4j', '123456'))  # 默认数据库:neo4j\n",
     "g = Graph('http://localhost:7474', auth=('neo4j', '123456'), name='test')\n",
     "print(g)"
    ],
