--- a/操作图数据库neo4j/RelationshipMatche.ipynb
+++ b/操作图数据库neo4j/RelationshipMatche.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "g = Graph('http://localhost:7474', auth=('neo4j', '123456'), name='test')\n",
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<py2neo.matching.RelationshipMatcher at 0x26b31fadbe0>"
+      "text/plain": "<py2neo.matching.RelationshipMatcher at 0x1cc923a0a00>"
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "22"
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "父亲(Node('男性人物', name='张无忌', 战斗力='998'), Node('男性人物', name='张翠山', 战斗力='300'))"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a new RelationshipMatch that filters by identity and returns the first matched Relationship. This can be used to match and return a Relationship by ID.\n",
     "relations.get(8)"
@@ -145,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<py2neo.matching.RelationshipMatch object at 0x0000026B31D630A0>\n",
+      "<py2neo.matching.RelationshipMatch object at 0x000001CC923BE2E0>\n",
       "<class 'py2neo.matching.RelationshipMatch'>\n"
      ]
     }
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -197,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "[情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=4000, level='敌视'),\n 情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=7000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=9000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=8000, level='非常敌视'),\n 情敌(Node('女性人物', name='蛛儿', 战斗力='60'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=2000, level='轻微敌视'),\n 情敌(Node('女性人物', name='蛛儿', 战斗力='60'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=100)]"
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=4000, level='敌视')"
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,13 +256,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,13 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 73,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "[情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=7000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=9000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=8000, level='非常敌视')]"
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "[情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=7000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=9000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=8000, level='非常敌视')]"
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "[情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=7000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=9000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=8000, level='非常敌视')]"
      },
-     "execution_count": 76,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,13 +377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "[情敌(Node('女性人物', name='周芷若', 战斗力='900'), Node('女性人物', name='小昭', 战斗力='100'), Hatred=7000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='蛛儿', 战斗力='60'), Hatred=9000, level='非常敌视'),\n 情敌(Node('女性人物', name='小昭', 战斗力='100'), Node('女性人物', name='周芷若', 战斗力='900'), Hatred=8000, level='非常敌视')]"
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
