增加了一点认知

--- a/操作Elasticsearch搜索和分析引擎/索引/mapping_properties_参数type.ipynb
+++ b/操作Elasticsearch搜索和分析引擎/索引/mapping_properties_参数type.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "object:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/object.html\n",
     "nested:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/nested.html\n",
+    "flattened(can help prevent a mappings explosion from having too many distinct field mappings):https://www.elastic.co/guide/en/elasticsearch/reference/7.11/flattened.html\n",
     "\n",
     "join:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/parent-join.html\n",
     "\n",
