--- a/操作图数据库neo4j/Node.ipynb
+++ b/操作图数据库neo4j/Node.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "g = Graph('http://localhost:7474', auth=('neo4j', '123456'), name='test')\n",
@@ -28,26 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":Person {'Person'}\n",
-      ":Employee:Person {'Employee', 'Person'}\n",
-      "True\n",
-      ":Person {'Person'}\n",
-      " set()\n",
-      "(:Mother {name: 'Alice'})\n",
-      ":Person {'Person'}\n",
-      ":Employee:Person {'Employee', 'Person'}\n",
-      "True\n",
-      ":Person {'Person'}\n",
-      " set()\n",
-      "(:Mother {name: 'Alice'})\n",
-      ":Person {'Person'}\n",
-      ":Employee:Person {'Employee', 'Person'}\n",
+      ":Person ['Person']\n",
+      ":Employee:Person {'Person', 'Employee'}\n",
       "True\n",
       ":Person {'Person'}\n",
       " set()\n",
@@ -64,7 +52,7 @@
     "    This set is immutable and cannot be used to add or remove labels.\n",
     "    Use methods such as add_label() and remove_label() for that instead.\n",
     "'''\n",
-    "print(a.labels, set(a.labels))  # 属性`labels`可以没有\n",
+    "print(a.labels, list(a.labels))  # 属性`labels`可以没有\n",
     "a.add_label(\"Employee\")  # Add the label label to this node.\n",
     "print(a.labels, set(a.labels))\n",
     "print(a.has_label('Employee'))  # Return True if this node has the label label, False otherwise.\n",
@@ -85,29 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "Node()"
      },
      "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": "Node()"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": "Node()"
-     },
-     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,36 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "{'name': 'Tom', 'love': 'mouse', 'live': 'USE', 'master': 'Alice'}\n",
-      "dict_keys(['name', 'love', 'live', 'master'])\n",
-      "dict_values(['Tom', 'mouse', 'USE', 'Alice'])\n",
-      "dict_items([('name', 'Tom'), ('love', 'mouse'), ('live', 'USE'), ('master', 'Alice')])\n",
-      "Tom\n",
-      "None\n",
-      "fish\n",
-      "(:Cat {live: 'USE', master: 'Alice', name: 'Tom'})\n",
-      "(:Cat {master: 'Alice', name: 'Tom'})\n",
-      "(:Cat {age: 5, master: 'Alice', name: 'Tom', `skin colour`: 'black'})\n",
-      "(:Cat {})\n",
-      "4\n",
-      "{'name': 'Tom', 'love': 'mouse', 'live': 'USE', 'master': 'Alice'}\n",
-      "dict_keys(['name', 'love', 'live', 'master'])\n",
-      "dict_values(['Tom', 'mouse', 'USE', 'Alice'])\n",
-      "dict_items([('name', 'Tom'), ('love', 'mouse'), ('live', 'USE'), ('master', 'Alice')])\n",
-      "Tom\n",
-      "None\n",
-      "fish\n",
-      "(:Cat {live: 'USE', master: 'Alice', name: 'Tom'})\n",
-      "(:Cat {master: 'Alice', name: 'Tom'})\n",
-      "(:Cat {age: 5, master: 'Alice', name: 'Tom', `skin colour`: 'black'})\n",
-      "(:Cat {})\n",
       "4\n",
       "{'name': 'Tom', 'love': 'mouse', 'live': 'USE', 'master': 'Alice'}\n",
       "dict_keys(['name', 'love', 'live', 'master'])\n",
@@ -206,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "g.create(a)\n",
@@ -222,18 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Graph('http://localhost:7474', name='test')\n",
-      "7\n",
-      "Graph('http://localhost:7474', name='test')\n",
-      "10\n",
-      "Graph('http://localhost:7474', name='test')\n",
-      "13\n"
+      "1\n"
      ]
     }
    ],
@@ -252,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
