--- a/操作图数据库neo4j/Graph.ipynb
+++ b/操作图数据库neo4j/Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -25,7 +25,7 @@
    ],
    "source": [
     "# g = Graph('http://localhost:7474', auth=('neo4j', '123456'))  # 默认数据库:neo4j\n",
-    "g = Graph('http://localhost:7474', auth=('neo4j', '123456'), name='test')\n",
+    "g = Graph('http://localhost:7474', auth=('neo4j', 'qwer123456'), name='test')\n",
     "print(g)"
    ],
    "metadata": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Delete all nodes and relationships from this Graph.\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# 支持数据类型:字符串;数值;布尔值;字符串/数组/布尔值组成的数组\n",
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "frozenset({'Person'})"
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "frozenset({'KNOWS'})"
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
