milvus基本学习完毕

--- a/操作向量数据库milvus/c_Create-a-Collection.ipynb
+++ b/操作向量数据库milvus/c_Create-a-Collection.ipynb
@@ -37,13 +37,17 @@
    "source": [
     "# Prepare Schema\n",
     "book_id = FieldSchema(\n",
+    "    # Name of the field to create.\n",
     "    name=\"book_id\",\n",
+    "    # Data type of the field to create.\n",
     "    dtype=DataType.INT64,\n",
+    "    # Switch to control if the field is primary key field.\n",
     "    is_primary=True,\n",
     ")\n",
     "book_name = FieldSchema(\n",
     "    name=\"book_name\",\n",
     "    dtype=DataType.VARCHAR,\n",
+    "    # Maximum length of strings allowed to be inserted.\n",
     "    max_length=200,\n",
     ")\n",
     "word_count = FieldSchema(\n",
@@ -53,9 +57,11 @@
     "book_intro = FieldSchema(\n",
     "    name=\"book_intro\",\n",
     "    dtype=DataType.FLOAT_VECTOR,\n",
+    "    # Dimension of the vector.\n",
     "    dim=2\n",
     ")\n",
     "schema = CollectionSchema(\n",
+    "    # Fields of the collection to create.\n",
     "    fields=[book_id, book_name, word_count, book_intro],\n",
     "    description=\"Test book search\",\n",
     ")"
@@ -170,6 +176,7 @@
     }
    ],
    "source": [
+    "# Returns a list of all collection names.\n",
     "utility.list_collections()"
    ],
    "metadata": {
@@ -205,6 +212,7 @@
     }
    ],
    "source": [
+    "# Rename a collection to new collection name\n",
     "utility.rename_collection(\"book_table\", \"book_table_\")\n",
     "print(utility.has_collection(\"book_table\"))  # False\n",
     "print(utility.has_collection(\"book_table_\"))  # True"
@@ -241,6 +249,7 @@
     }
    ],
    "source": [
+    "# Drop a collection by name\n",
     "utility.drop_collection(\"book_table_\")\n",
     "print(utility.has_collection(\"book_table_\"))  # False"
    ],
