--- a/操作向量数据库milvus/f2_Search_and_Query.ipynb
+++ b/操作向量数据库milvus/f2_Search_and_Query.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import random\n",
     "from pymilvus import connections, CollectionSchema, FieldSchema, DataType, Collection, utility\n",
     "\n",
     "connections.connect(host='127.0.0.1', port='19530')"
@@ -15,8 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 120,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442740278675636225, success count: 2000, err count: 0)"
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "book_id = FieldSchema(\n",
     "    name=\"book_id\",\n",
@@ -46,54 +56,61 @@
     "    name=\"book_table\",\n",
     "    schema=schema,\n",
     "    using='default'\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Build an Index on Vectors\n",
-    "\n",
-    "官方参考文档:https://milvus.io/docs/build_index.md"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Status(code=0, message=)"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index_params = {\n",
-    "    \"metric_type\": \"L2\",\n",
-    "    \"index_type\": \"IVF_FLAT\",\n",
-    "    \"params\": {\"nlist\": 1024}\n",
-    "}\n",
+    ")\n",
     "\n",
     "collection.create_index(\n",
-    "    # Name of the vector field to build index on.\n",
     "    field_name=\"book_intro\",\n",
-    "    # Parameters of the index to build.\n",
-    "    index_params=index_params\n",
+    "    index_params={\n",
+    "        \"metric_type\": \"L2\",\n",
+    "        \"index_type\": \"IVF_FLAT\",\n",
+    "        \"params\": {\"nlist\": 1024}\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "collection.create_index(\n",
+    "    field_name=\"book_name\",\n",
+    "    index_name=\"scalar_index\",\n",
+    ")\n",
+    "\n",
+    "collection.insert([[i for i in range(2000)],\n",
+    "                   [str(i) for i in range(2000)],\n",
+    "                   [i for i in range(10000, 12000)],\n",
+    "                   [[random.random() for _ in range(2)] for _ in range(2000)]])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "outputs": [],
+   "source": [
+    "collection.load()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [],
+   "source": [
+    "# Unlike a vector similarity search, a vector query retrieves vectors via scalar filtering based on boolean expression.\n",
+    "res = collection.query(\n",
+    "    expr=\"book_id in [3, 4]\",\n",
+    "    # Number of results to skip in the returned set. This parameter is available only when limit is specified, and the sum of this value and limit should be less than 16384.\n",
+    "    offset=0,\n",
+    "    # Number of the most similar results to return. The sum of this value and offset should be less than 16384.\n",
+    "    limit=100,\n",
+    "    output_fields=[\"book_id\", \"book_intro\"],\n",
     ")"
    ],
    "metadata": {
@@ -104,35 +121,20 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Build an Index on Scalars"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 123,
    "outputs": [
     {
      "data": {
-      "text/plain": "Status(code=0, message=)"
+      "text/plain": "[{'book_id': 3, 'book_intro': [0.54245764, 0.8402737]},\n {'book_id': 4, 'book_intro': [0.09124215, 0.9747137]}]"
      },
-     "execution_count": 9,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "collection.create_index(\n",
-    "  field_name=\"book_name\",\n",
-    "  index_name=\"scalar_index\",\n",
-    ")"
+    "res"
    ],
    "metadata": {
     "collapsed": false,
@@ -143,9 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "outputs": [],
-   "source": [],
+   "source": [
+    "collection.release()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
